# DocAsk

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: __init__.py  main.py
app/api/v1/: endpoints.py
app/core/: config.py
app/models/: schemas.py
app/services/: embeddings.py  ingestion.py  llm.py  rag.py  vector_store.py
app/tests/: conftest.py  test_ask_api.py  test_base.py  test_upload_api.py
app/utils/: file_utils.py  text.py
